style.css: added toggle selector'

--- a/style.css
+++ b/style.css
@@ -12,3 +12,14 @@
   position: absolute;
   left: -99em;
 }
+
+.toggle {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  width: 90px;
+  height: 50px;
+  background-color: #83d8ff;
+  border-radius: 64px;
+  transition: background-color 200ms cubic-bezier(0.446, 0.06, 0.55, 0.99);
+}
