style.css: added toggle_handler selector

--- a/style.css
+++ b/style.css
@@ -41,6 +41,22 @@
     color:#749ed7;
 }
 
+.toggle_hangler {
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    top: 4px;
+    left: 4px;
+    width: 45px;
+    height: 45px;
+    border-color: #ffcf66;
+    border-radius: 50px;
+    box-shadow: 0 2px 6px rgba(0,0,0, .2);
+    transition: all 450ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    transform: rotate(-45 deg);
+    ;
+}
+
 
 
 
