--- a/style.css
+++ b/style.css
@@ -33,33 +33,53 @@
 }
 
 .toggle::after {
-    content: "Dark";
-    position: absolute;
-    right: -50px;
-    top: 20px;
-    font-size: 20px;
-    color:#749ed7;
+  content: "Dark";
+  position: absolute;
+  right: -50px;
+  top: 20px;
+  font-size: 20px;
+  color: #749ed7;
 }
 
 .toggle_hangler {
-    display: inline-block;
-    position: relative;
-    z-index: 1;
-    top: 4px;
-    left: 4px;
-    width: 45px;
-    height: 45px;
-    border-color: #ffcf66;
-    border-radius: 50px;
-    box-shadow: 0 2px 6px rgba(0,0,0, .2);
-    transition: all 450ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    transform: rotate(-45 deg);
-    ;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+  top: 4px;
+  left: 4px;
+  width: 45px;
+  height: 45px;
+  border-color: #ffcf66;
+  border-radius: 50px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  transition: all 450ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transform: rotate(-45 deg);
 }
 
-
-
-
-
+.toggle_handler .crater--1 {
+  top: 18px;
+  left: 10px;
+  width: 4px;
+  height: 4px;
 }
 
+.toggle__handler .crater--2 {
+  top: 28px;
+  left: 22px;
+  width: 6px;
+  height: 6px;
+}
+
+.toggle__handler .crater--3 {
+  top: 10px;
+  left: 25px;
+  width: 8px;
+  height: 8px;
+}
+
+.star {
+  position: absolute;
+  background-color: #fff;
+  transition: all 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  border-radius: 50%;
+}
